[gd_scene load_steps=2 format=3 uid="uid://d4d5i6a7l8o9g"]

[ext_resource type="Script" path="res://ui/dialogue/dialogue_box.gd" id="1_dlg"]

[node name="DialogueBox" type="CanvasLayer"]
layer = 15
script = ExtResource("1_dlg")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Portrait" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
expand_mode = 1
stretch_mode = 5

[node name="TextContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="SpeakerName" type="Label" parent="Panel/MarginContainer/HBoxContainer/TextContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Speaker"

[node name="DialogueText" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/TextContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
theme_override_font_sizes/font_size = 11
text = "Dialogue text goes here."
fit_content = true
scroll_active = false

[node name="AdvanceIndicator" type="Label" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -18.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "â–¼"

[node name="ChoicesContainer" type="VBoxContainer" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 4
